<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/animal"
        style="@style/Widget.Give.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="updateData"
        android:text="@string/animal" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/internationalPeace"
        style="@style/Widget.Give.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="updateData"
        android:text="@string/intPeace" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/homeless"
        style="@style/Widget.Give.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="updateData"
        android:text="@string/homelessness" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/medicalResearch"
        style="@style/Widget.Give.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="updateData"
        android:text="@string/medicalResearch" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/wildlife"
        style="@style/Widget.Give.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="updateData"
        android:text="@string/wildlife" />


</merge>